--- a/group-3-main.ipynb
+++ b/group-3-main.ipynb
@@ -31,11 +31,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
+    "import time\n",
     "import re\n",
     "from tqdm import tqdm\n",
     "import warnings\n",
@@ -54,7 +55,9 @@
     "from nltk.tokenize import word_tokenize\n",
     "from nltk.stem import WordNetLemmatizer\n",
     "from nltk.sentiment.vader import SentimentIntensityAnalyzer  # lexicon-based\n",
+    "\n",
     "import spacy\n",
+    "from simplemma import lemmatize, text_lemmatizer, simple_tokenizer  # https://github.com/adbar/simplemma\n",
     "\n",
     "from bs4 import BeautifulSoup\n",
     "\n",
@@ -1450,7 +1453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -1520,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -1575,7 +1578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1592,16 +1595,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# with the outer merge the columns description and host about are mainly composed of\n",
+    "# duplicate captions. To increase efficiency we can run the pre proc functions for their\n",
+    "# unique values and then map them to them to the merged datasets\n",
+    "\n",
+    "def map_from_unique(func, text_col, lang_col = None, df = train_merged) -> dict:\n",
+    "    # this assumes that data pre processing functions always follow the structure\n",
+    "    # foo(text, lang) or just foo(text), otherwise will return an error\n",
+    "\n",
+    "    if lang_col:\n",
+    "        # to the format: {index: (text, lang)}\n",
+    "        unique = pd.Series(df[[text_col, lang_col]].values.tolist(), index=df['index']).map(tuple).to_dict()\n",
+    "        return {index: func(text, lang) for index, (text, lang) in unique.items()}\n",
+    "    \n",
+    "    unique = dict(zip(df['index'], df[text_col]))\n",
+    "    return {index: func(text) for index, text in unique.items()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Took 49.25 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "# all text cleaning functions have already been\n",
     "# developed during data exploration\n",
     "\n",
-    "train_merged['clean_description'] = train_merged['description'].apply(clean_text)\n",
-    "train_merged['clean_host_about'] = train_merged['host_about'].apply(clean_text)\n",
-    "train_merged['clean_comments'] = train_merged['comments'].apply(clean_text)"
+    "start = time.perf_counter()\n",
+    "\n",
+    "train_merged['clean_description'] = train_merged['index'].map(map_from_unique(clean_text, 'description'))\n",
+    "train_merged['clean_host_about'] = train_merged['index'].map(map_from_unique(clean_text, 'host_about'))\n",
+    "train_merged['clean_comments'] = train_merged['comments'].apply(clean_text)\n",
+    "\n",
+    "print(f'Took {time.perf_counter() - start:0.2f} seconds')"
    ]
   },
   {
@@ -1613,16 +1651,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 140,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Took 24.98 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "# class created during data exploration\n",
+    "\n",
+    "start = time.perf_counter()\n",
+    "\n",
     "language_detector = LanguageDetector()\n",
     "\n",
-    "train_merged['clean_description_lang'] = train_merged['clean_description'].apply(lambda text: language_detector.detect_language(text))\n",
-    "train_merged['clean_host_about_lang'] = train_merged['clean_host_about'].apply(lambda text: language_detector.detect_language(text))\n",
-    "train_merged['clean_comments_lang'] = train_merged['clean_comments'].apply(lambda text: language_detector.detect_language(text))"
+    "train_merged['clean_description_lang'] = train_merged['index'].map(map_from_unique(language_detector.detect_language, 'clean_description'))\n",
+    "train_merged['clean_host_about_lang'] = train_merged['index'].map(map_from_unique(language_detector.detect_language, 'clean_host_about'))\n",
+    "train_merged['clean_comments_lang'] = train_merged['clean_comments'].apply(lambda text: language_detector.detect_language(text))\n",
+    "\n",
+    "print(f'Took {time.perf_counter() - start:0.2f} seconds')"
    ]
   },
   {
@@ -1645,42 +1696,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Supported languagues account for: 0.997\n"
+      "Supported NLTK languages:\n",
+      "['arabic', 'azerbaijani', 'basque', 'bengali', 'catalan', 'chinese', 'danish', 'dutch', 'english', 'finnish', 'french', 'german', 'greek', 'hebrew', 'hinglish', 'hungarian', 'indonesian', 'italian', 'kazakh', 'nepali', 'norwegian', 'portuguese', 'romanian', 'russian', 'slovene', 'spanish', 'swedish', 'tajik', 'turkish']\n",
+      "\n",
+      "Proportion of reviews in languages supported by NLTK: 0.997\n"
      ]
     }
    ],
    "source": [
-    "# firstly you need to run:\n",
-    "# python -m spacy download [model_name, e.g. en_core_web_sm]\n",
-    "# for all models\n",
-    "# NOTE: spacy sm models are built for efficiency whereas trf models are built for accuracy\n",
+    "# supported languages with stop words in nltk\n",
     "\n",
-    "nlp_models = {\n",
-    "    'en': spacy.load('en_core_web_sm'),\n",
-    "    'pt': spacy.load('pt_core_news_sm'),\n",
-    "    'fr': spacy.load('fr_core_news_sm'),\n",
-    "    'it': spacy.load('it_core_news_sm'),\n",
-    "    'es': spacy.load('es_core_news_sm'),\n",
-    "    'de': spacy.load('de_core_news_sm'),\n",
-    "    'nl': spacy.load('nl_core_news_sm'),\n",
-    "    'pl': spacy.load('pl_core_news_sm'),\n",
-    "    'ru': spacy.load('ru_core_news_sm'),\n",
-    "    'da': spacy.load('da_core_news_sm'),\n",
-    "    'sv': spacy.load('sv_core_news_sm'),\n",
-    "    'ca': spacy.load('ca_core_news_sm'),\n",
-    "    'zh': spacy.load('zh_core_web_sm'),\n",
-    "    'ja': spacy.load('ja_core_news_sm')\n",
+    "print('Supported NLTK languages:')\n",
+    "print(stopwords.fileids())\n",
+    "\n",
+    "# transforming it into ISO 639-1 codes\n",
+    "nltk_stopwords = {\n",
+    "    'ar': stopwords.words('arabic'),\n",
+    "    'az': stopwords.words('azerbaijani'),\n",
+    "    'eu': stopwords.words('basque'),\n",
+    "    'bn': stopwords.words('bengali'),\n",
+    "    'ca': stopwords.words('catalan'),\n",
+    "    'zh': stopwords.words('chinese'),\n",
+    "    'da': stopwords.words('danish'),\n",
+    "    'nl': stopwords.words('dutch'),\n",
+    "    'en': stopwords.words('english'),\n",
+    "    'fi': stopwords.words('finnish'),\n",
+    "    'fr': stopwords.words('french'),\n",
+    "    'de': stopwords.words('german'),\n",
+    "    'el': stopwords.words('greek'),\n",
+    "    'he': stopwords.words('hebrew'),\n",
+    "    'hi': stopwords.words('hinglish'),\n",
+    "    'hu': stopwords.words('hungarian'),\n",
+    "    'id': stopwords.words('indonesian'),\n",
+    "    'it': stopwords.words('italian'),\n",
+    "    'kk': stopwords.words('kazakh'),\n",
+    "    'ne': stopwords.words('nepali'),\n",
+    "    'no': stopwords.words('norwegian'),\n",
+    "    'pt': stopwords.words('portuguese'),\n",
+    "    'ro': stopwords.words('romanian'),\n",
+    "    'ru': stopwords.words('russian'),\n",
+    "    'sl': stopwords.words('slovene'),\n",
+    "    'es': stopwords.words('spanish'),\n",
+    "    'sv': stopwords.words('swedish'),\n",
+    "    'tg': stopwords.words('tajik'),\n",
+    "    'tr': stopwords.words('turkish')\n",
     "}\n",
     "\n",
-    "# proportion of supported languages\n",
-    "print(f\"Supported languagues account for: {sum([v for k,v in train_merged['clean_comments_lang'].value_counts().items() if k in nlp_models.keys()]) / sum(train_merged['clean_comments_lang'].value_counts()):.3f}\")"
+    "p_nltk_sup_languages = sum([v for k,v in train_merged['clean_comments_lang'].value_counts().items() if k in nltk_stopwords.keys()]) / train_merged['clean_comments_lang'].value_counts().sum()\n",
+    "print(f\"\\nProportion of reviews in languages supported by NLTK: {p_nltk_sup_languages:.3f}\")\n",
+    "\n",
+    "# ... virtually all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Took 159.55 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "def remove_stopwords(text, lang='en'):\n",
+    "    if pd.isna(text):\n",
+    "        return text\n",
+    "\n",
+    "    if lang in nltk_stopwords.keys():\n",
+    "        text = ' '.join([t for t in word_tokenize(text) if t not in nltk_stopwords[lang]])\n",
+    "\n",
+    "    return text\n",
+    "\n",
+    "\n",
+    "start = time.perf_counter()\n",
+    "\n",
+    "train_merged['no_stopwords_description'] = train_merged['index'].map(map_from_unique(remove_stopwords, 'clean_description', 'clean_description_lang'))\n",
+    "train_merged['no_stopwords_host_about'] = train_merged['index'].map(map_from_unique(remove_stopwords, 'clean_host_about', 'clean_host_about_lang'))\n",
+    "train_merged['no_stopwords_comments'] = train_merged.apply(lambda row: remove_stopwords(row['clean_comments'], row['clean_comments_lang']), axis=1)\n",
+    "\n",
+    "print(f'Took {time.perf_counter() - start:0.2f} seconds')"
    ]
   },
   {
@@ -1690,49 +1795,7 @@
    "outputs": [],
    "source": [
     "# ... what if, for languages not supported by spacy we first translate them?\n",
-    "# there will be very few occurrences, so time spent will no longer be an issue!\n",
-    "\n",
-    "# DO IT"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "def no_stopwords_process_grouped_texts(df, text_column):\n",
-    "    # Define the correct language column based on the text column\n",
-    "    if text_column == 'clean_host_about':\n",
-    "        lang_column = 'language_host_about'\n",
-    "    elif text_column == 'clean_description':\n",
-    "        lang_column = 'language_description'\n",
-    "    elif text_column == 'clean_comments':\n",
-    "        lang_column = 'language_comment'\n",
-    "    else:\n",
-    "        raise ValueError(\"Invalid text column name\")\n",
-    "\n",
-    "    results = []\n",
-    "\n",
-    "    # Process each language group\n",
-    "    for lang, group in df.groupby(lang_column):\n",
-    "        nlp = nlp_models.get(lang, nlp_models.get('en'))  # Fallback to English if the language model is not available\n",
-    "        if nlp is None:\n",
-    "            print(f\"Warning: No model available for {lang}. Skipping this group.\")\n",
-    "            continue\n",
-    "\n",
-    "        # Use nlp.pipe for efficient processing, including lemmatization\n",
-    "        docs = nlp.pipe(group[text_column].astype(str), disable=[\"tok2vec\", \"tagger\", \"parser\", \"attribute_ruler\"])\n",
-    "        processed_texts = [' '.join([token.lemma_ for token in doc]) for doc in docs]\n",
-    "\n",
-    "        # Create a new column with the lemmatized text\n",
-    "        group['lemmatized_' + text_column] = processed_texts\n",
-    "        results.append(group)\n",
-    "\n",
-    "    # Concatenate all processed groups back into a single DataFrame\n",
-    "    return pd.concat(results) if results else df.assign(**{'lemmatized_' + text_column: pd.NA})\n"
+    "# there will be very few occurrences, so time spent will no longer be an issue!"
    ]
   },
   {
@@ -1744,10 +1807,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 157,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Took 2153.97 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "simplemma_supported_languages = [\n",
+    "    'ast', 'bg', 'ca', 'cs', 'cy', 'da', 'de', 'el', 'en',\n",
+    "    'enm', 'es', 'et', 'fa', 'fi', 'fr', 'ga', 'gd', 'gl',\n",
+    "    'gv', 'hbs', 'hi', 'hu', 'hy', 'id', 'is', 'it', 'ka',\n",
+    "    'la', 'lb', 'lt', 'lv', 'mk', 'ms', 'nb', 'nl', 'nn',\n",
+    "    'pl', 'pt', 'ro', 'ru', 'se', 'sk', 'sl', 'sq', 'sv',\n",
+    "    'sw', 'tl', 'tr', 'uk'\n",
+    "]\n",
+    "\n",
+    "def lemmatize(text, lang = 'en'):\n",
+    "\n",
+    "    if pd.isna(text):\n",
+    "        return text\n",
+    "\n",
+    "    if lang in simplemma_supported_languages:\n",
+    "        text = ' '.join(text_lemmatizer(text, lang=lang))\n",
+    "\n",
+    "    return text\n",
+    "\n",
+    "\n",
+    "start = time.perf_counter()\n",
+    "\n",
+    "train_merged['lemma_description'] = train_merged['index'].map(map_from_unique(lemmatize, 'no_stopwords_description', 'clean_description_lang'))\n",
+    "train_merged['lemma_host_about'] = train_merged['index'].map(map_from_unique(lemmatize, 'no_stopwords_host_about', 'clean_host_about_lang'))\n",
+    "train_merged['lemma_comments'] = train_merged.apply(lambda row: remove_stopwords(row['no_stopwords_comments'], row['clean_comments_lang']), axis=1)\n",
+    "\n",
+    "print(f'Took {time.perf_counter() - start:0.2f} seconds')\n",
+    "\n",
+    "# ... around 36 minutes"
+   ]
   },
   {
    "cell_type": "markdown",
