--- a/group-3-main.ipynb
+++ b/group-3-main.ipynb
@@ -1807,14 +1807,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Took 2153.97 seconds\n"
+      "Proportion of reviews in languages supported by 'simplemma': 0.999\n"
      ]
     }
    ],
@@ -1828,6 +1828,24 @@
     "    'sw', 'tl', 'tr', 'uk'\n",
     "]\n",
     "\n",
+    "p_simplemma_sup_languages = sum([v for k,v in train_merged['clean_comments_lang'].value_counts().items() if k in simplemma_supported_languages]) / train_merged['clean_comments_lang'].value_counts().sum()\n",
+    "print(f\"Proportion of reviews in languages supported by 'simplemma': {p_simplemma_sup_languages:.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Took 2153.97 seconds\n"
+     ]
+    }
+   ],
+   "source": [
     "def lemmatize(text, lang = 'en'):\n",
     "\n",
     "    if pd.isna(text):\n",
@@ -1897,6 +1915,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 218,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['index', 'description', 'host_about', 'unlisted', 'comments',\n",
+       "       'clean_description', 'clean_host_about', 'clean_comments',\n",
+       "       'clean_description_lang', 'clean_host_about_lang',\n",
+       "       'clean_comments_lang', 'no_stopwords_description',\n",
+       "       'no_stopwords_host_about', 'no_stopwords_comments', 'lemma_description',\n",
+       "       'lemma_host_about', 'lemma_comments'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 218,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_merged.columns"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1905,11 +1949,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 226,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(6248, 3)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>lemma_comments</th>\n",
+       "      <th>unlisted</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>cozy comfortable house stay innever worry safe...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   index                                     lemma_comments  unlisted\n",
+       "0      1  cozy comfortable house stay innever worry safe...         0\n",
+       "1      2                                                NaN         1\n",
+       "2      3                                                NaN         1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# show we treat our reviews as independent or aggregate all reviews for each property?"
+    "# show we treat our reviews as independent or aggregate all reviews for each property?\n",
+    "\n",
+    "def group_reviews_by_property(df, only_comments=False):\n",
+    "    index_column = ['index']\n",
+    "    target_column = ['unlisted']\n",
+    "\n",
+    "    if not only_comments:\n",
+    "        description_columns = [col for col in df.columns if 'description' in col]\n",
+    "        host_about_columns = [col for col in df.columns if 'host_about' in col]\n",
+    "    comments_columns = [col for col in df.columns if 'comments' in col]\n",
+    "\n",
+    "    # no matter what the description and host_about columns (or columns derived from them)\n",
+    "    # will contain the duplicates and the comments column will not\n",
+    "    target_df = df[index_column + target_column].drop_duplicates().copy()\n",
+    "\n",
+    "    reviews_df = df[index_column + comments_columns].copy()\n",
+    "    grouped_df = (reviews_df\n",
+    "                  .groupby(index_column)\n",
+    "                  .agg(lambda x: ' '.join(x.dropna()))\n",
+    "                  .reset_index())\n",
+    "    grouped_df = grouped_df.replace('', np.nan)\n",
+    "    grouped_df = grouped_df.merge(target_df, on=index_column[0], how='inner')\n",
+    "    \n",
+    "    if not only_comments:\n",
+    "        info_df = df[index_column + description_columns + host_about_columns].drop_duplicates().copy()\n",
+    "        # merging\n",
+    "        grouped_df = info_df.merge(grouped_df, on=index_column[0], how='inner')\n",
+    "\n",
+    "    return grouped_df\n",
+    "\n",
+    "\n",
+    "wanted_columns = [\n",
+    "    'index',\n",
+    "    'unlisted',\n",
+    "    'lemma_description',\n",
+    "    'lemma_host_about',\n",
+    "    'lemma_comments'\n",
+    "]\n",
+    "\n",
+    "grouped_train = group_reviews_by_property(train_merged[wanted_columns], only_comments=True)\n",
+    "print(grouped_train.shape)\n",
+    "display(grouped_train.head(3))\n",
+    "\n",
+    "# TODO\n",
+    "# assert statements, check if everything is allright"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **Handling Missing Values**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4245, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# so far we have been ignoring missing values...\n",
+    "# ... what to do? remove, but the test set also shows NANs?\n",
+    "\n",
+    "# maybe we can also drop them and then, for those cases, predict\n",
+    "# the majority class, 'listed'?\n",
+    "\n",
+    "grouped_train = grouped_train.loc[grouped_train['lemma_comments'].notnull(), :]\n",
+    "print(grouped_train.shape)\n",
+    "\n",
+    "# TODO check if everything correct"
    ]
   },
   {
@@ -1921,15 +2109,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 229,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset shapes:\n",
+      "\tTrain: 3395 (79.98%)\n",
+      "\tVal: 425 (10.01%)\n",
+      "\tTest: 425 (10.01%)\n",
+      "\n",
+      "Total observations: 4245\n"
+     ]
+    }
+   ],
    "source": [
     "# due to sheer amount of data k-fold cross-validation will not be feasible\n",
     "# so a train-val-test split is preferred\n",
     "\n",
-    "X = ''\n",
-    "y = ''\n",
+    "X = grouped_train['lemma_comments']\n",
+    "y = grouped_train['unlisted']\n",
     "\n",
     "def two_step_proportions(train_p, val_p, test_p):\n",
     "    \"\"\"\n",
